[package]
name = "monolith-arb-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime - the engine that runs all concurrent tasks
tokio = { version = "1", features = ["full"] }

# WebSocket client - how you talk to Binance streams
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# Required for WebSocket async stream operations
futures-util = "0.3"

# HTTP client for REST API calls (fetching pairs, placing orders)
reqwest = { version = "0.11", features = ["json"] }

# Serialization - parsing JSON responses from Binance
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Precise decimal math - NEVER use f64 for money
rust_decimal = { version = "1", features = ["serde-float"] }
rust_decimal_macros = "1"

# Structured logging - better than println! for production
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Load .env file into environment variables
dotenv = "0.15"

# Async-aware read/write locks - better than Mutex for read-heavy shared state  
#tokio = { version = "1", features = ["full"] }

# URL parsing for WebSocket connections
url = "2"